--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
-        <title>ColaVendingMachine</title>
+        <title>VendingMachine</title>
     </head>
     <body>
         <header class="tit_logo">
@@ -14,10 +14,10 @@
 
         <main class="VendingMachine">
             <section class="Order">
-                <!-- ★★★★★li를 label로 하면 버튼 전체 클릭-->
-                <!-- <ul class="menu">
-                    <li class="Original_Cola">Original_Cola
-                        <button class="btn_pricetag">1000원</button><!--버튼을 중복되게 계속 넣는게 맞나? 스크린리더가 읽어야 하는 부분이라 어쩔 수 없는 것 같기도 -->
+                 <ul class="menu">
+                    <li class="Original_Cola">Original_Cola                        
+                        <button class="btn_pricetag">1000원</button>
+                        <!--버튼을 중복되게 계속 넣는게 맞는지 고민했지만, 스크린리더가 읽어야 하는 부분이라 어쩔 수 없는 것 같기도 합니다-->
                     </li>
                     <li class="Violet_Cola">Violet_Cola
                         <button class="btn_pricetag">1000원</button>
@@ -34,7 +34,7 @@
                     <li class="Orange_Cola">Orange_Cola
                         <button class="btn_pricetag">1000원</button>
                     </li>
-                </ul> -->
+                </ul>
                 <div class="Payment">
                     <span class="txt_Change">1,000</span> 
                     <button class="btn_Change">거스름돈 반환</button>
